# sim2real-pnp

./: .gitignore  README.md  README_ISAAC.md  git_status_output.txt
Real_robot/: Forward_kinematics.py  RL_loop.py  control_robot_test.py  dataset.npz  inspect_checkpoint.py  inspect_model.py  load_traj.py  model_converged.pt  policy.pt  read_write_test.py  robot_move_all_joints.py  test_URX_freq.py  test_camera.py  test_mov_1direction.py  test_robot.py  urdfToMGD.py
Real_robot/validation_mujoco/: MUJOCO_LOG.TXT  debug_offset.py  plot.py  policy(1).pt  policy(2).pt  rapport_mujoco.npz  tag_to_tag_12HZ.npz  test_tool0.py  test_viewer.py  track_dataset.py  ur10.xml  ur10_complete.xml  ur10_stl.urdf  validate_mujoco.py
Real_robot/validation_mujoco/convert/: add_actuators.py  convert_urdf.py  ur10.urdf
control/: UR_10_rotation.py  isaac_adapter.py  sim.py  spawn_ur10.py  test.py
environ/: .gitignore
environ/Purement_Rl/: .gitignore  README.md
environ/Purement_Rl/outputmodel/: model_2026-01-08_15-36-34.pt  model_2026-01-08_16-43-27.pt  model_2026-01-08_16-55-51.pt  model_2026-01-08_17-19-25.pt  model_2026-01-08_22-00-21.pt  model_2026-01-08_22-37-34.pt  model_2026-01-08_22-57-53.pt  model_2026-01-08_23-05-15.pt  model_2026-01-08_23-13-25.pt  model_2026-01-09_12-15-37.pt  model_2026-01-09_12-21-28.pt  model_2026-01-09_14-59-40.pt  model_2026-02-15_13-43-12.pt  model_2026-02-15_23-08-56.pt  model_converged.pt
environ/Purement_Rl/scripts/: codeplot.py  codetest.py  conver.py  dataset_2droites.npz  isaaclab_deploy_policy_npz.py  list_envs.py  plot_deploy_log.py  plot_for_report.py  plotgraph.py  random_agent.py  re_zero.py  tag2_to_tag3.npz  (+8 more)
environ/my_env/: .gitignore  README.md
environ/purement_RL2/: README.md
environ/ur10/: .gitignore  500_traj.npz  500_traj_12HZ.npz  README_QUICK.md  WORKFLOW_GENERATION_TRAJECTOIRES.md  check_dataset.py  convert_ur10_to_usd.sh  tag2_to_tag3.npz  tag_to_tag.npz  tag_to_tag_12HZ.npz  tag_to_tag_12HZ_Final.npz  ur10.urdf
environ/ur10/src/ur_coppeliasim/: CMakeLists.txt  GUIDE_RAPIDE.md  INTEGRATION_GUIDE.md  README.md  README_ISAACLAB.md  SUMMARY_ISAACLAB.md  package.xml
environ/ur10/src/ur_coppeliasim/config/: apriltag_config.yaml  apriltag_simple.yaml  bridge_config.yaml  camera_info_webcam.yaml  ur_with_ground.srdf.xacro
environ/ur10/src/ur_coppeliasim/launch/: apriltag_detection.launch.py  apriltag_visualize.launch.py  simple_apriltag_usb_cam.launch.py  tag_pipeline.launch.py  test_bridge.launch.py  ur_coppeliasim_moveit.launch.py  ur_isaaclab_moveit.launch.py
environ/ur10/src/ur_coppeliasim/launch/camera/: tag_to_tag_tracker.launch.py.py
environ/ur10/src/ur_coppeliasim/scripts/: add_ground_plane.py  add_obstacle.py  apriltag_auto_mover.py  apriltag_visualizer.py  check_environment.py  coppeliasim_bridge.py  fake_joint_publisher.py  generate_moveit_dataset_v2.py  generate_single_line.py  generate_tag_to_tag_trajectory.py  generate_xy_trajectories.py  isaaclab_bridge.py  print_detections.py  simple_isaaclab_test.py  test_individual_joints.py  test_isaaclab_moveit.py  test_movement.py  test_simple_movement.py  visualize_workspace.py
environ/ur10/src/ur_coppeliasim/scripts/camera/: Transforme.py
environ/ur10/src/ur_coppeliasim/ur_coppeliasim/: __init__.py
perception/: bob_calib.py  calibration.py  convertir_config.py  detection_ArUco.py  plesvakeur.py  validation_calibrage.py
(+75 files in other folders)
